made the changes to the sql db, hopefully should work since I dropped the tables beforehand. also fixed my workout functions and tests to allow for null values being passed it. all workoutRepostiroy tests passing!