@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
@@ -19,14 +20,17 @@ import java.util.Optional;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
+import org.assertj.core.util.Arrays;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.jdbc.core.simple.JdbcClient;
+import org.springframework.jdbc.support.GeneratedKeyHolder;
+import org.springframework.jdbc.support.KeyHolder;
 
 // import com.allyoucanexercise.back_end.helpers.TimeStampFormatter;
 
@@ -50,24 +54,46 @@ public class WorkoutRepositoryTest {
     DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
     LocalDateTime time = LocalDateTime.parse(fixedTimeString, formatter);
 
-    Workout setupCompletedWorkout(Integer userId, String title, LocalDateTime completedAt) {
+    Workout setupCompletedWorkout(Integer userId, String title, LocalDateTime completedAt,
+            Integer workoutDurationSeconds) {
         Workout temporaryWorkout = new Workout();
         temporaryWorkout.setUserId(userId);
         temporaryWorkout.setTitle(title);
         temporaryWorkout.setCompletedAt(completedAt);
+        temporaryWorkout.setWorkoutDurationSeconds(workoutDurationSeconds);
         return temporaryWorkout;
     }
 
     @BeforeEach
     void setUp() {
 
-        workout = setupCompletedWorkout(1, "Test Title1", time);
-        workout2 = setupCompletedWorkout(2, "Test Title2", time);
+        workout = setupCompletedWorkout(1, "Test Title1", time, 300);
+        workout2 = setupCompletedWorkout(2, "Test Title2", time, 400);
 
         MockitoAnnotations.openMocks(this);
         statementSpec = mock(JdbcClient.StatementSpec.class);
         mappedQuerySpec = mock(JdbcClient.MappedQuerySpec.class);
         resultQuerySpec = mock(JdbcClient.ResultQuerySpec.class);
+    }
+
+    private ArgumentCaptor<KeyHolder> mockInsertWithGeneratedKey(JdbcClient.StatementSpec statementSpec,
+            int generatedId) {
+        // more explanation about this part:
+        // https://chatgpt.com/share/67f71599-e054-800f-b316-c6f80ff617e5
+        // ArgumentCaptor captures the arguments passed to a method during testing
+
+        ArgumentCaptor<KeyHolder> keyHolderCaptor = ArgumentCaptor.forClass(KeyHolder.class);
+        // Mock the .update(keyHolder) method and simulate what it should do
+
+        when(statementSpec.update(keyHolderCaptor.capture())).thenAnswer(invocation -> {
+            KeyHolder kh = keyHolderCaptor.getValue(); // this is the same keyHolder created inside your create() method
+            // Simulate generated key
+            ((GeneratedKeyHolder) kh).getKeyList().add(Map.of("GENERATED_KEY", generatedId));// key simulation
+            return 1; // simulate one row affected with update
+        });
+
+        return keyHolderCaptor;
+
     }
 
     @Test
@@ -83,6 +109,7 @@ public class WorkoutRepositoryTest {
         assertNotNull(workouts);
         assertEquals(1, workouts.size());
         assertEquals("Test Title1", workouts.get(0).getTitle());
+        assertEquals(300, workouts.get(0).getWorkoutDurationSeconds());
 
         verify(jdbcClient).sql("select * from workout");
         verify(statementSpec).query(Workout.class);
@@ -93,7 +120,7 @@ public class WorkoutRepositoryTest {
     void testFindById() {
 
         when(jdbcClient
-                .sql("SELECT id, user_Id, title, created_at, completed_at FROM workout WHERE id = :id"))
+                .sql("SELECT id, user_Id, title, created_at, completed_at, workout_duration_seconds FROM workout WHERE id = :id"))
                 .thenReturn(statementSpec);
         when(statementSpec.param("id", 1)).thenReturn(statementSpec);
         when(statementSpec.query(Workout.class)).thenReturn(mappedQuerySpec);
@@ -105,7 +132,7 @@ public class WorkoutRepositoryTest {
         assertEquals(time, result.get().getCompletedAt());
 
         verify(jdbcClient)
-                .sql("SELECT id, user_Id, title, created_at, completed_at FROM workout WHERE id = :id");
+                .sql("SELECT id, user_Id, title, created_at, completed_at, workout_duration_seconds FROM workout WHERE id = :id");
         verify(statementSpec).param("id", 1);
         verify(statementSpec).query(Workout.class);
         verify(mappedQuerySpec).optional();
@@ -115,66 +142,75 @@ public class WorkoutRepositoryTest {
     @DisplayName("test create - Happy Path")
     void testCreate() {
         when(jdbcClient
-                .sql("INSERT INTO workout(user_id, title, completed_at) values(?,?,?)"))
+                .sql("INSERT INTO workout(user_id, title, completed_at, workout_duration_seconds) VALUES (?, ?, ?, ?)"))
                 .thenReturn(statementSpec);
-        when(statementSpec.params(List.of(workout.getUserId(), workout.getTitle(),
-                workout.getCompletedAt())))
+        when(statementSpec.params(Arrays.asList(new Object[] {
+                workout.getUserId(),
+                workout.getTitle() != null ? workout.getTitle() : "",
+                workout.getCompletedAt(),
+                workout.getWorkoutDurationSeconds()
+        })))
                 .thenReturn(statementSpec);
-        when(statementSpec.update()).thenReturn(1);
 
-        workoutRepository.create(workout);
+        ArgumentCaptor<KeyHolder> keyHolderCaptor = mockInsertWithGeneratedKey(statementSpec, 42);
 
+        Integer generatedId = workoutRepository.create(workout);
+
+        assertEquals(42, generatedId);
         verify(jdbcClient)
-                .sql("INSERT INTO workout(user_id, title, completed_at) values(?,?,?)");
-        verify(statementSpec).params(List.of(workout.getUserId(), workout.getTitle(),
-                workout.getCompletedAt()));
-        verify(statementSpec).update();
+                .sql("INSERT INTO workout(user_id, title, completed_at, workout_duration_seconds) VALUES (?, ?, ?, ?)");
+        verify(statementSpec).params(Arrays.asList(new Object[] {
+                workout.getUserId(),
+                workout.getTitle() != null ? workout.getTitle() : "",
+                workout.getCompletedAt(),
+                workout.getWorkoutDurationSeconds()
+        }));
+        verify(statementSpec).update(keyHolderCaptor.capture());
     }
 
-    // @Test
-    // @DisplayName("test create - Unhappy Path")
-    // void testCreateUnhappy() {
-    // can't figure out how to do this one because List will not accept nulls
+    @Test
+    @DisplayName("test create still works with null workoutDurationSeconds")
+    void testCreateWithNullWorkoutDurationSeconds() {
+        Workout workoutWithNullWorkoutDurationSeconds = workout;
+        workoutWithNullWorkoutDurationSeconds.setWorkoutDurationSeconds(null);
+        when(jdbcClient
+                .sql("INSERT INTO workout(user_id, title, completed_at, workout_duration_seconds) VALUES (?, ?, ?, ?)"))
+                .thenReturn(statementSpec);
+        when(statementSpec.params(Arrays.asList(new Object[] {
+                workoutWithNullWorkoutDurationSeconds.getUserId(),
+                workoutWithNullWorkoutDurationSeconds.getTitle() != null
+                        ? workoutWithNullWorkoutDurationSeconds.getTitle()
+                        : "",
+                workoutWithNullWorkoutDurationSeconds.getCompletedAt(),
+                workoutWithNullWorkoutDurationSeconds.getWorkoutDurationSeconds()
+        })))
+                .thenReturn(statementSpec);
 
-    // Workout workoutMissingUserId = new Workout();
-    // workoutMissingUserId.setTitle("title");
-    // workoutMissingUserId.setCompletedAt(time);
-    // // Missing userId
-    // when(jdbcClient
-    // .sql("INSERT INTO workout(userId, title, completedAt) values(?,?,?)"))
-    // .thenReturn(statementSpec);
-    // when(statementSpec.params(List.of(null,
-    // workoutMissingUserId.getTitle(),
-    // workoutMissingUserId.getCompletedAt())))
-    // .thenReturn(statementSpec);
-    // when(statementSpec.update()).thenReturn(0);
+        ArgumentCaptor<KeyHolder> keyHolderCaptor = mockInsertWithGeneratedKey(statementSpec, 42);
 
-    // try {
-    // workoutRepository.create(workoutMissingUserId);
-    // fail("Expected an exception to be thrown due to unsuccessful creation");
-    // } catch (IllegalStateException e) {
-    // // Verify that the exception message contains the expected failure reason
-    // assertTrue(e.getMessage().contains("Failed to create workout"));
-    // }
+        Integer generatedId = workoutRepository.create(workoutWithNullWorkoutDurationSeconds);
 
-    // verify(jdbcClient)
-    // .sql("INSERT INTO workout(userId, title, completedAt) values(?,?,?)");
-    // verify(statementSpec).params(List.of(null,
-    // workoutMissingUserId.getTitle(),
-    // workoutMissingUserId.getCompletedAt()));
-    // verify(statementSpec).update();
-    // }
+        assertEquals(42, generatedId);
+        verify(jdbcClient)
+                .sql("INSERT INTO workout(user_id, title, completed_at, workout_duration_seconds) VALUES (?, ?, ?, ?)");
+        verify(statementSpec).params(Arrays.asList(new Object[] {
+                workoutWithNullWorkoutDurationSeconds.getUserId(),
+                workoutWithNullWorkoutDurationSeconds.getTitle() != null
+                        ? workoutWithNullWorkoutDurationSeconds.getTitle()
+                        : "",
+                workoutWithNullWorkoutDurationSeconds.getCompletedAt(),
+                workoutWithNullWorkoutDurationSeconds.getWorkoutDurationSeconds()
+        }));
+        verify(statementSpec).update(keyHolderCaptor.capture());
+    }
 
     @Test
     @DisplayName("test create exception - Missing userId")
     void testCreateUnhappyMissingUserId() {
-        // Create workout with missing userId
-        Workout workoutMissingUserId = new Workout();
-        workoutMissingUserId.setTitle("Test Title");
-        workoutMissingUserId.setCompletedAt(time);
-
+        Workout workoutMissingUserId = workout;
+        workoutMissingUserId.setUserId(null);
         when(jdbcClient
-                .sql("INSERT INTO workout(user_id, title, completed_at) values(?,?,?)"))
+                .sql("INSERT INTO workout(user_id, title, completed_at, workout_duration_seconds) VALUES (?, ?, ?, ?)"))
                 .thenReturn(statementSpec);
 
         try {
@@ -195,43 +231,53 @@ public class WorkoutRepositoryTest {
 
         int id = workout.getId();
         when(jdbcClient.sql(
-                "update workout set user_id = ?, title = ?, completed_at = ? where id = ?"))
+                "update workout set user_id = ?, title = ?, completed_at = ?, workout_duration_seconds where id = ?"))
                 .thenReturn(statementSpec);
-        when(statementSpec.params(List.of(updatedWorkout.getUserId(),
-                updatedWorkout.getTitle(),
-                updatedWorkout.getCompletedAt(), id)))
+        when(statementSpec.params(Arrays.asList(new Object[] {
+                updatedWorkout.getUserId(),
+                updatedWorkout.getTitle() != null ? updatedWorkout.getTitle() : "",
+                updatedWorkout.getCompletedAt(),
+                updatedWorkout.getWorkoutDurationSeconds()
+        }), id))
                 .thenReturn(statementSpec);
         when(statementSpec.update()).thenReturn(1);
 
         workoutRepository.update(updatedWorkout, id);
 
         verify(jdbcClient).sql(
-                "update workout set user_id = ?, title = ?, completed_at = ? where id = ?");
-        verify(statementSpec).params(List.of(updatedWorkout.getUserId(),
-                updatedWorkout.getTitle(),
-                updatedWorkout.getCompletedAt(), id));
+                "update workout set user_id = ?, title = ?, completed_at = ?, workout_duration_seconds where id = ?");
+        verify(statementSpec).params(Arrays.asList(new Object[] {
+                updatedWorkout.getUserId(),
+                updatedWorkout.getTitle() != null ? updatedWorkout.getTitle() : "",
+                updatedWorkout.getCompletedAt(),
+                updatedWorkout.getWorkoutDurationSeconds()
+        }), id);
         verify(statementSpec).update();
     }
 
     @Test
     @DisplayName("test update - Unhappy Path")
     void testUpdateUnhappy() {
-        Workout updatedWorkout = workout;
-        updatedWorkout.setTitle("New Title");
+        Workout updatedWorkoutMissingCompletedDate = workout;
+        updatedWorkoutMissingCompletedDate.setTitle("New Title");
 
         int id = workout.getId();
 
         when(jdbcClient.sql(
-                "update workout set user_id = ?, title = ?, completed_at = ? where id = ?"))
+                "update workout set user_id = ?, title = ?, completed_at = ?, workout_duration_seconds where id = ?"))
                 .thenReturn(statementSpec);
-        when(statementSpec.params(List.of(updatedWorkout.getUserId(),
-                updatedWorkout.getTitle(),
-                updatedWorkout.getCompletedAt(), id)))
+        when(statementSpec.params(Arrays.asList(new Object[] {
+                updatedWorkoutMissingCompletedDate.getUserId(),
+                updatedWorkoutMissingCompletedDate.getTitle() != null ? updatedWorkoutMissingCompletedDate.getTitle()
+                        : "",
+                updatedWorkoutMissingCompletedDate.getCompletedAt(),
+                updatedWorkoutMissingCompletedDate.getWorkoutDurationSeconds()
+        }), id))
                 .thenReturn(statementSpec);
         when(statementSpec.update()).thenReturn(0);
 
         try {
-            workoutRepository.update(updatedWorkout, id);
+            workoutRepository.update(updatedWorkoutMissingCompletedDate, id);
             fail("Expected an exception to be thrown due to unsuccessful creation");
         } catch (IllegalStateException e) {
             // Verify that the exception message contains the expected failure reason
@@ -239,10 +285,14 @@ public class WorkoutRepositoryTest {
         }
 
         verify(jdbcClient).sql(
-                "update workout set user_id = ?, title = ?, completed_at = ? where id = ?");
-        verify(statementSpec).params(List.of(updatedWorkout.getUserId(),
-                updatedWorkout.getTitle(),
-                updatedWorkout.getCompletedAt(), id));
+                "update workout set user_id = ?, title = ?, completed_at = ?, workout_duration_seconds where id = ?");
+        verify(statementSpec).params(Arrays.asList(new Object[] {
+                updatedWorkoutMissingCompletedDate.getUserId(),
+                updatedWorkoutMissingCompletedDate.getTitle() != null ? updatedWorkoutMissingCompletedDate.getTitle()
+                        : "",
+                updatedWorkoutMissingCompletedDate.getCompletedAt(),
+                updatedWorkoutMissingCompletedDate.getWorkoutDurationSeconds()
+        }), id);
         verify(statementSpec).update();
     }
 
@@ -282,46 +332,62 @@ public class WorkoutRepositoryTest {
         verify(statementSpec).update();
     }
 
-    // @Test
-    // void testFindByUserId() {
-    // Workout additionalWorkout = setupCompletedWorkout(2, "AdditionalTitle",
-    // time);
-    // Integer userId = 2;
+    @Test
+    void testFindByUserId() {
+        Workout additionalWorkout = setupCompletedWorkout(2, "AdditionalTitle",
+                time, 300);
+        Integer userId = 2;
 
-    // Map<String, Object> workoutMap = new HashMap<>();
-    // workoutMap.put("id", workout2.getId());
-    // workoutMap.put("userId", workout2.getUserId());
-    // workoutMap.put("title", workout2.getTitle());
-    // workoutMap.put("createdAt", workout2.getCreatedAt());
-    // workoutMap.put("completedAt", workout2.getCompletedAt());
+        when(jdbcClient.sql("select * from workout where user_id = :user_id"))
+                .thenReturn(statementSpec);
+        when(statementSpec.param("user_id", userId)).thenReturn(statementSpec);
+        when(statementSpec.query()).thenReturn(resultQuerySpec);
+        when(statementSpec.query(Workout.class)).thenReturn(mappedQuerySpec);
+        when(mappedQuerySpec.list()).thenReturn(List.of(workout2, additionalWorkout));
 
-    // Map<String, Object> additionalWorkoutMap = new HashMap<>();
-    // additionalWorkoutMap.put("id", additionalWorkout.getId());
-    // additionalWorkoutMap.put("userId", additionalWorkout.getUserId());
-    // additionalWorkoutMap.put("title", additionalWorkout.getTitle());
-    // additionalWorkoutMap.put("createdAt", additionalWorkout.getCreatedAt());
-    // additionalWorkoutMap.put("completedAt", additionalWorkout.getCompletedAt());
+        List<Workout> workouts = workoutRepository.findByUserId(userId);
 
-    // log.error("additional2 is {}", workout2);
-    // log.error("workoutMap is {}", workoutMap);
-    // when(jdbcClient.sql("select * from workout where user_id = :user_id"))
-    // .thenReturn(statementSpec);
-    // when(statementSpec.param("user_id", userId)).thenReturn(statementSpec);
-    // when(statementSpec.query()).thenReturn(resultQuerySpec);
-    // when(statementSpec.query(Workout.class)).thenReturn(mappedQuerySpec);
-    // when(resultQuerySpec.listOfRows()).thenReturn(List.of(workoutMap,
-    // additionalWorkoutMap));
+        assertNotNull(workouts);
+        assertEquals(2, workouts.size());
+        assertEquals("Test Title2", workouts.get(0).getTitle());
 
-    // List<Workout> workouts = workoutRepository.findByUserId(userId);
+        verify(jdbcClient).sql("select * from workout where user_id = :user_id");
+        verify(statementSpec).query(Workout.class);
+        verify(mappedQuerySpec).list();
 
-    // log.error("******workouts is {}", workouts);
-
-    // assertNotNull(workouts);
-    // assertEquals(2, workouts.size());
-    // assertEquals("Test Title2", workouts.get(0).getTitle());
-
-    // verify(jdbcClient).sql("select * from workout where user_id = :user_id");
-    // verify(statementSpec).query(Workout.class);
-    // verify(resultQuerySpec.listOfRows());
-    // }
+    }
 }
+
+// @Test
+// @DisplayName("test create - Unhappy Path")
+// void testCreateUnhappy() {
+// can't figure out how to do this one because List will not accept nulls
+
+// Workout workoutMissingUserId = new Workout();
+// workoutMissingUserId.setTitle("title");
+// workoutMissingUserId.setCompletedAt(time);
+// // Missing userId
+// when(jdbcClient
+// .sql("INSERT INTO workout(userId, title, completedAt) values(?,?,?)"))
+// .thenReturn(statementSpec);
+// when(statementSpec.params(List.of(null,
+// workoutMissingUserId.getTitle(),
+// workoutMissingUserId.getCompletedAt())))
+// .thenReturn(statementSpec);
+// when(statementSpec.update()).thenReturn(0);
+
+// try {
+// workoutRepository.create(workoutMissingUserId);
+// fail("Expected an exception to be thrown due to unsuccessful creation");
+// } catch (IllegalStateException e) {
+// // Verify that the exception message contains the expected failure reason
+// assertTrue(e.getMessage().contains("Failed to create workout"));
+// }
+
+// verify(jdbcClient)
+// .sql("INSERT INTO workout(userId, title, completedAt) values(?,?,?)");
+// verify(statementSpec).params(List.of(null,
+// workoutMissingUserId.getTitle(),
+// workoutMissingUserId.getCompletedAt()));
+// verify(statementSpec).update();
+// }
